--- a/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
@@ -234,7 +234,7 @@
                     {% endblock %}
 
                     {% block sw_product_list_grid_loader %}
-                        <sw-loader class="loader-e2e" v-if="isLoading"></sw-loader>
+                        <sw-loader v-if="isLoading"></sw-loader>
                     {% endblock %}
                 </div>
             {% endblock %}
