--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-list/sw-settings-rule-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-list/sw-settings-rule-list.html.twig
@@ -283,7 +283,7 @@
 
                             {% block sw_settings_rule_list_empty_message %}
                                 <sw-empty-state v-else-if="!isLoading && !total"
-                                                :title="$tc('sw-settings.rule.list.messageEmpty')">
+                                                :title="$tc('sw-settings-rule.list.messageEmpty')">
                                 </sw-empty-state>
                             {% endblock %}
 
