NEXT-1114 - Implement events, improve OrderConverter

--- a/Resources/administration/src/module/sw-order/component/sw-order-address-modal/sw-order-address-modal.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-address-modal/sw-order-address-modal.html.twig
@@ -22,7 +22,7 @@
                             {% block sw_order_address_modal_tabs_content_edit_address %}
                                 <sw-customer-address-form :address="address"
                                                           :countries="countries">
-                                </sw-customer-address-form>dd
+                                </sw-customer-address-form>
                             {% endblock %}
                         </div>
                         <div v-else>
