--- a/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
@@ -34,9 +34,7 @@
             </template>
         {% endblock %}
 
-        {% block sw_order_detail_language_switch %}
-            <sw-language-switch slot="language-switch" @on-change="onChangeLanguage"></sw-language-switch>
-        {% endblock %}
+        {% block sw_order_detail_language_switch %}{% endblock %}
 
         {% block sw_order_detail_content %}
             <sw-card-view slot="content">
