--- a/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -41,9 +41,7 @@
             </template>
         {% endblock %}
 
-        {% block sw_order_list_language_switch %}
-            <sw-language-switch slot="language-switch" @on-change="onChangeLanguage"></sw-language-switch>
-        {% endblock %}
+        {% block sw_order_list_language_switch %}{% endblock %}
 
         {% block sw_order_list_content %}
             <template slot="content">
