--- a/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.scss
+++ b/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.scss
@@ -1,4 +1,4 @@
-@import "~less/variables";
+@import "~scss/variables";
 
 .sw-order-line-items-grid {
     .sw-icon {
@@ -10,5 +10,5 @@
 .sw-order-line-items-grid__actions-container
 {
     padding: 24px;
-    border-bottom: 1px solid @color-steam-cloud;
+    border-bottom: 1px solid $color-steam-cloud;
 }
