NEXT-1587 - Fix vue.js prop injection errors when categories or selected category are empty

--- a/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.html.twig
@@ -1,6 +1,6 @@
 {% block sw_category_tree %}
     <sw-tree class="sw-category-tree"
-        v-if="categories"
+        v-if="categories.length"
         :items="categories"
         :sortable="true"
         :searchable="false"
