--- a/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
@@ -1,5 +1,5 @@
 {% block sw_category_view %}
-    <sw-card-view sidebar v-if="category" class="sw-category-view">
+    <sw-card-view sidebar v-if="category && typeof category === 'object'" class="sw-category-view">
 
         {% block sw_category_view_information %}
             <sw-card :title="$tc('sw-category.general.headlineInformationCard')" :isLoading="isLoading">
